[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  major_version_zero = true

  [tool.poetry]
  name = "GitHub Starter Workflows"
  version = "0.14.1"
  description = "GitHub Actions Starter Workflows and Default Community Health Files"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.12.0"

  [tool.poetry.group.dev.dependencies]
  commitizen = "==3.10.1" # Keep in sync with .pre-commit-config.yaml.
  pre-commit = "==3.5.0"
