[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  major_version_zero = true

  [tool.poetry]
  name = "GitHub Starter Workflows"
  version = "0.14.16"
  description = "GitHub Actions Starter Workflows and Default Community Health Files"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.12.1"

  [tool.poetry.group.dev.dependencies]
  commitizen = "==3.13.0" # Keep in sync with .pre-commit-config.yaml.
  pre-commit = "==3.6.0"
